--- a/char-words-counter/index.html
+++ b/char-words-counter/index.html
@@ -24,6 +24,35 @@
     <div class="container mt-5">
       <h1>Calculadora de caracteres, palavras e linhas</h1>
       <p>Digite ou cole seu texto abaixo.</p>
+      <div class="row">
+        <div class="col-8">
+          <form>
+            <div class="form-group">
+              <textarea
+                name="texto"
+                id="text"
+                rows="3"
+                class="form-control"
+              ></textarea>
+            </div>
+          </form>
+          <div id="results">
+            <ul class="list-group">
+              <li class="list-group-item">Caracteres sem espaço:</li>
+              <li class="list-group-item">Caracteres com espaço:</li>
+              <li class="list-group-item">Palavras:</li>
+              <li class="list-group-item">Linhas:</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-4 border rounded">
+          <p>
+            O Contador de Caracteres é a solução para os seus problemas quando
+            você precisa saber quantos caracteres um determinado texto
+            apresenta. Chega de abrir o Word para contar as palavras.
+          </p>
+        </div>
+      </div>
     </div>
     <!-- Código abaixo já visto -->
     <script src="main.js"></script>
