--- a/char-words-counter/index.html
+++ b/char-words-counter/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Contador de caracteres, palavras e linhas</title>
   </head>
   <!-- Código acima já visto -->
   <body>
@@ -38,10 +38,16 @@
           </form>
           <div id="results">
             <ul class="list-group">
-              <li class="list-group-item">Caracteres sem espaço:</li>
-              <li class="list-group-item">Caracteres com espaço:</li>
-              <li class="list-group-item">Palavras:</li>
-              <li class="list-group-item">Linhas:</li>
+              <li class="list-group-item">
+                Caracteres sem espaço: <span id="without-spaces"></span>
+              </li>
+              <li class="list-group-item">
+                Caracteres com espaço: <span id="with-spaces"></span>
+              </li>
+              <li class="list-group-item">
+                Palavras: <span id="words"></span>
+              </li>
+              <li class="list-group-item">Linhas: <span id="lines"></span></li>
             </ul>
           </div>
         </div>
