--- a/char-words-counter/index.html
+++ b/char-words-counter/index.html
@@ -25,7 +25,7 @@
       <h1>Calculadora de caracteres, palavras e linhas</h1>
       <p>Digite ou cole seu texto abaixo.</p>
       <div class="row">
-        <div class="col-8">
+        <div class="col-md-8">
           <form>
             <div class="form-group">
               <textarea
@@ -51,7 +51,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-4 border rounded">
+        <div class="col-md-4 mt-md-0 mt-3 border rounded">
           <p>
             O Contador de Caracteres é a solução para os seus problemas quando
             você precisa saber quantos caracteres um determinado texto
